--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
-    "mysql2": "^2.1.0"
+    "mysql2": "^2.1.0",
+    "pg": "^8.0.3"
   },
   "devDependencies": {},
   "autoload": {
