--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
     "mysql2": "^2.1.0",
-    "pg": "^8.0.3"
+    "pg": "^8.0.3",
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {},
   "autoload": {
